<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitleDialog"
            style="@style/Subtitle01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/dialogEditLocation"
            android:textColor="@color/text" />

        <TextView
            style="@style/TextDialogSubtitle"
            android:layout_marginHorizontal="10dp"
            android:text="@string/latitude" />

        <EditText
            android:id="@+id/etDialogLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/latitude"
            android:inputType="numberSigned|numberDecimal"
            android:textColor="@color/text" />


        <TextView
            style="@style/TextDialogSubtitle"
            android:layout_marginHorizontal="10dp"
            android:text="@string/longitude" />

        <EditText
            android:id="@+id/etDialogLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/longitude"
            android:inputType="numberSigned|numberDecimal" />

        <TextView
            style="@style/TextDialogSubtitle"
            android:layout_marginHorizontal="10dp"
            android:text="@string/address" />

        <EditText
            android:id="@+id/etDialogAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/address" />

        <TextView
            style="@style/TextDialogSubtitle"
            android:layout_marginHorizontal="10dp"
            android:text="@string/location" />

        <EditText
            android:id="@+id/etDialogLocality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/location" />

        <TextView
            style="@style/TextDialogSubtitle"
            android:layout_marginHorizontal="10dp"
            android:text="@string/district" />

        <EditText
            android:id="@+id/etDialogDistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/district" />


        <TextView
            style="@style/TextDialogSubtitle"
            android:layout_marginHorizontal="10dp"
            android:text="@string/province" />

        <EditText
            android:id="@+id/etDialogProvince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/province" />


        <TextView
            style="@style/TextDialogSubtitle"
            android:layout_marginHorizontal="10dp"
            android:text="@string/regional" />

        <EditText
            android:id="@+id/etDialogRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/regional" />

        <Button
            android:id="@+id/btDialogEditLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/edit" />


    </LinearLayout>

</ScrollView>